# toolz

./: default.nix  flake.nix
dev/: formatter.nix  shell.nix
overlays/: flake-module.nix
templates/: flake-module.nix
templates/marimo/: .gitignore  README.md  flake.nix  pyproject.toml
templates/marimo/nix/: packages.nix  shell.nix
templates/marimo/notebooks/: example.py
templates/nextflow/: .envrc  .gitignore  flake.nix
templates/nextflow/nix/: formatter.nix  images.nix  packages.nix  shell.nix
templates/nextflow/workflows/: main.nf
templates/nextflow/workflows/.nextflow.config/: base.config  modules.config  nextflow.config
templates/nextflow/workflows/analyze_enrichment/: main.nf  seqtable.nf
templates/nextflow/workflows/process_reads/: fastp.nf  main.nf  multiqc.nf  selexqc.nf
templates/nix/: flake.nix
templates/nix/nix/: formatter.nix  shell.nix
templates/pixi/: flake.nix
templates/pixi-vps/: flake.nix
templates/pixi/nix/: shell.nix
templates/rust/: flake.nix
templates/rust/nix/: formatter.nix  overlays.nix  packages.nix  shell.nix
templates/uv/: flake.nix
templates/uv/nix/: shell.nix  uv2nix.nix
website/: flake-module.nix
