[project]
name = "PROJ_NAME"
version = "0.1.0"
description = "A marimo reactive notebook project"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["marimo", "notebook", "reactive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = ["marimo>=0.10.0"]

[project.optional-dependencies]
recommended = [
  "duckdb>=1.0.0",
  "altair>=5.4.0",
  "polars>=1.9.0",
  "sqlglot>=23.4",
  "ruff",
]
ai = ["openai>=1.55.3"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.marimo]
formatting.line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
